attempting fix for homepage hero overflow on mobile

--- a/src/app/home/scss/_home.scss
+++ b/src/app/home/scss/_home.scss
@@ -3,6 +3,7 @@
 	.hero {
 		text-align: center;
 		height: 640px;
+		width: 100%;
 		position: relative;
 
 	    .content { 
@@ -199,6 +200,6 @@
 		}
 	}
 }
-			
+		
 
 
